fix(threading): Allow proper termination of threads which was causing issues in Linux

--- a/peekingduck/configs/input/recorded.yml
+++ b/peekingduck/configs/input/recorded.yml
@@ -1,5 +1,5 @@
 input: ["none"]
-output: ["img", "pipeline_end", "filename", "saved_video_fps"]
+output: ["img", "pipeline_end", "filename", "saved_video_fps", "video_cap"]
 
 resize: {
             do_resizing: False,
