--- a/peekingduck/configs/input/live.yml
+++ b/peekingduck/configs/input/live.yml
@@ -11,4 +11,4 @@ resize: {
 input_source: 0    # 0 for webcam, rtsp URL for CCTV
 mirror_image: False
 frames_log_freq: 100    # Logs frequency of frames passed in cli
-threading: True
+threading: False    # Enable to speed up FPS. Currently unsupported for Linux.
