--- a/peekingduck/configs/model/license_plate_detector.yml
+++ b/peekingduck/configs/model/license_plate_detector.yml
@@ -1,13 +1,17 @@
 input: ["img"]
 output: ["bboxes", "bbox_labels", "bbox_scores"]
 
-model_type: v4tiny # v4 or v4tiny 
+model_type: v4tiny # v4 or v4tiny v4tinytf
 classes: ../weights/yolo_license_plate/classes.names
 weights_dir: ["../weights/yolo_license_plate"]
+model_weights_dir: {
+    v4: ../weights/yolov4/LPv4,
+    v4tiny: ../weights/yolov4/LPv4tiny,
+}
 blob_file: "yolo_license_plate.zip"
 model_configuration: {
     v4tiny: ../weights/yolo_license_plate/yolov4tiny-LP.cfg,
-    v4 : ../weights/yolo_license_plate/yolov4-LP.cfg
+    v4: ../weights/yolo_license_plate/yolov4-LP.cfg
 }
 model_weights: {
     v4tiny: ../weights/yolo_license_plate/yolov4tiny-LP.weights,
