(setup.cfg): Add colorama library

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
     numpy >= 1.17.3
     tqdm == 4.45.0
     shapely == 1.7.1
+    colorama == 0.4.4
     scipy
 include_package_data = True
 
