--- a/tests/pipeline/nodes/model/mtcnnv1/test_mtcnn.yml
+++ b/tests/pipeline/nodes/model/mtcnnv1/test_mtcnn.yml
@@ -1,31 +1,18 @@
 input: ["img"]
-output: ["bboxes", "bbox_labels", "bbox_scores"]
+output: ["bboxes", "bbox_scores", "bbox_labels"]
 
-model_type: v4tiny # v4 or v4tiny
-classes: ../weights/yolov4/coco.names
-weights_dir: ["../weights/yolov4"]
-blob_file: "yolo.zip"
+weights_dir: ["../weights/mtcnn"]
+blob_file: "mtcnn.zip"
 graph_files: {
-    v4: ../weights/yolov4/yolov4.pb,
-    v4tiny: ../weights/yolov4/yolov4-tiny.pb
+    mtcnn: ../weights/mtcnn/mtcnn.pb
 }
-size: 416
-num_classes: 80
-detect_ids: [0]
-max_output_size_per_class: 50
-max_total_size: 50
-yolo_iou_threshold: 0.5
-yolo_score_threshold: 0.2
+mtcnn_min_size: 40
+mtcnn_factor: 0.709
+mtcnn_thresholds: [0.6, 0.7, 0.7]
+mtcnn_score: 0.7
 MODEL_NODES: {
-    yolov41: {
-        inputs: [x:0],
-        outputs: [model/tf_op_layer_split_2/split_2:0,
-        model/tf_op_layer_split_1/split_1:0,
-        model/tf_op_layer_split/split:0,
-        Identity:0]
-    },
-    yolov4: {
-        inputs: [x:0],
-        outputs: [Identity:0]
+    mtcnn: {
+        inputs: [input:0, min_size:0, thresholds:0, factor:0],
+        outputs: [prob:0, landmarks:0, box:0]
     }
 }
