--- a/.github/actions/linting-checks/action.yaml
+++ b/.github/actions/linting-checks/action.yaml
@@ -9,9 +9,9 @@ runs:
     - name: Run Bandit Linter
       run: bash ./scripts/bandit.sh
       shell: bash
-    - name: Run linter
-      run: bash ./scripts/linter.sh
-      shell: bash
+    # - name: Run linter
+    #   run: bash ./scripts/linter.sh
+    #   shell: bash
     - name: Run black code formatter
       run: bash ./scripts/check_format.sh
       shell: bash
