--- a/.github/workflows/publish_skip_testpypi.yml
+++ b/.github/workflows/publish_skip_testpypi.yml
@@ -1,6 +1,6 @@
 name: Skip Test Pypi and Publish to Pypi
 env:
-  VERSION: ${{github.event.release.tag_name}}
+  VERSION: v1.0.3rc2
 on:
   workflow_dispatch
 
