--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = >=3.6, !=3.9.*, !=3.10.*
+python_requires = >=3.6, <3.9
 install_requires =
     pyyaml >= 5.3
     click == 7.1.2
