Rename weights folder to peekingduck_weights

--- a/peekingduck/configs/model/efficientdet.yml
+++ b/peekingduck/configs/model/efficientdet.yml
@@ -2,16 +2,16 @@ input: ['img']
 output: ['bboxes', 'bbox_labels', 'bbox_scores']
 
 model_type: 0 # 0-4
-classes_file: ../weights/efficientdet/coco_90.json
-weights_dir: ['../weights/efficientdet']
+classes_file: ../peekingduck_weights/efficientdet/coco_90.json
+weights_dir: ['../peekingduck_weights/efficientdet']
 blob_file: 'efficientdet.zip'
 graph_files:
     {
-        0: ../weights/efficientdet/efficientdet-d0.pb,
-        1: ../weights/efficientdet/efficientdet-d1.pb,
-        2: ../weights/efficientdet/efficientdet-d2.pb,
-        3: ../weights/efficientdet/efficientdet-d3.pb,
-        4: ../weights/efficientdet/efficientdet-d4.pb,
+        0: ../peekingduck_weights/efficientdet/efficientdet-d0.pb,
+        1: ../peekingduck_weights/efficientdet/efficientdet-d1.pb,
+        2: ../peekingduck_weights/efficientdet/efficientdet-d2.pb,
+        3: ../peekingduck_weights/efficientdet/efficientdet-d3.pb,
+        4: ../peekingduck_weights/efficientdet/efficientdet-d4.pb,
     }
 size: [512, 640, 768, 896, 1024]
 num_classes: 90
