--- a/tests/pipeline/nodes/model/hrnetv1/test_hrnet.yml
+++ b/tests/pipeline/nodes/model/hrnetv1/test_hrnet.yml
@@ -1,9 +1,9 @@
 input: ['img', 'bboxes']
 output: ['keypoints', 'keypoint_scores', 'keypoint_conns']
 
-weights_dir: ['../weights/hrnet']
+weights_dir: ['../peekingduck_weights/hrnet']
 blob_file: 'hrnet.zip'
-model_file: '../weights/hrnet/hrnet_frozen.pb'
+model_file: '../peekingduck_weights/hrnet/hrnet_frozen.pb'
 resolution: { height: 192, width: 256 }
 score_threshold: 0.1
 MODEL_NODES: { inputs: [x:0], outputs: [Identity:0] }
