--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ pyyaml >= 5.3.1
 requests == 2.24.0
 tensorflow == 2.2.0
 tqdm == 4.45.0
-# click == 7.1.2
+click == 7.1.2
 
 # OTF_req peekingduck.pipeline.nodes.dabble.zone_count shapely == 1.7.1
