--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,6 @@ install_requires =
     tensorflow >= 2.2
     numpy >= 1.17.3
     tqdm == 4.45.0
-    shapely == 1.7.1
     colorama == 0.4.4
     scipy
 include_package_data = True
@@ -39,7 +38,7 @@ include_package_data = True
 # [options.extras_require]
 
 [options.package_data]
-* = configs/*/*.yml
+* = configs/*/*.yml, optional_requirements.txt
 
 [options.packages.find]
 include = peekingduck, peekingduck.*
