Upgraded threading code to work on Windows, MacOS and Linux Add threading support to input.recorded

--- a/peekingduck/configs/input/recorded.yml
+++ b/peekingduck/configs/input/recorded.yml
@@ -8,3 +8,4 @@ resize: {
         }
 input_dir: 'PeekingDuck/data/input'
 mirror_image: False
+threading: False    # Enable to speed up FPS. Currently unsupported for Linux.
