--- a/peekingduck/configs/input/recorded.yml
+++ b/peekingduck/configs/input/recorded.yml
@@ -9,3 +9,4 @@ resize: {
 input_dir: 'PeekingDuck/data/input'
 mirror_image: False
 threading: False    # Enable to speed up FPS. Currently unsupported for Linux.
+buffer_frames: False
