test(cli): use a separate set of paths on windows to test absolute paths

--- a/tests/data/user_inputs/create_node.yml
+++ b/tests/data/user_inputs/create_node.yml
@@ -4,6 +4,12 @@ bad_paths: |
   /
   /some/path
   peekingduck/pipeline/nodes
+bad_paths_win: |
+  ..
+  ../some/path
+  C:/
+  C:/some/path
+  peekingduck/pipeline/nodes
 bad_types: |
   inputs
   random type
