--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,9 @@ include_package_data = True
 # TBD: Different extras for `full` and `edge`
 # [options.extras_require]
 
+[options.package_data]
+* = configs/*/*.yml, optional_requirements.txt
+
 [options.packages.find]
 include = peekingduck, peekingduck.*
 
