refactor: change logging messages to f-string, disable pylint warning logging-fstring-interpolation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,12 @@ markers = [
 
 [tool.pylint]
     [tool.pylint.'MESSAGES CONTROL']
-    disable=['no-member','attribute-defined-outside-init','access-member-before-definition']
+    disable = [
+        "access-member-before-definition",
+        "attribute-defined-outside-init",
+        "logging-fstring-interpolation",
+        "no-member",
+    ]
 
 [tool.mypy]
 ignore_missing_imports = true
