--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,8 @@ install_requires =
     numpy >= 1.17.3
     tqdm == 4.45.0
     colorama == 0.4.4
+    torch == 1.10.0
+    torchvision == 0.11.1
     scipy
 include_package_data = True
 
