build: add node_template.yml as package_data for create_node

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ include_package_data = True
 # [options.extras_require]
 
 [options.package_data]
-* = configs/*/*.yml, optional_requirements.txt
+* = configs/*/*.yml, configs/node_template.yml, optional_requirements.txt
 
 [options.packages.find]
 include = peekingduck, peekingduck.*
