node: (model.movenet) update doc string with the coding conventions in contributing docs and replace os.path with pathlib path

--- a/tests/pipeline/nodes/model/movenetv1/test_movenet.yml
+++ b/tests/pipeline/nodes/model/movenetv1/test_movenet.yml
@@ -8,7 +8,7 @@ model_weights_dir: {
     singlepose_lightning: ../peekingduck_weights/movenet/singlepose_lightning,
     singlepose_thunder: ../peekingduck_weights/movenet/singlepose_thunder,
 }
-blob_file: "movenet.zip"
+blob_file_name: "movenet.zip"
 
 resolution: {
     singlepose_lightning: { height: 192, width: 192 },
