--- a/peekingduck/configs/model/movenet.yml
+++ b/peekingduck/configs/model/movenet.yml
@@ -9,7 +9,7 @@ model_weights_dir: {
     singlepose_thunder: ../peekingduck_weights/movenet/singlepose_thunder,
 }
 
-blob_file: "movenet.zip"
+blob_file_name: "movenet.zip"
 
 resolution: {
     singlepose_lightning: { height: 192, width: 192 },
