--- a/peekingduck/configs/model/mtcnn.yml
+++ b/peekingduck/configs/model/mtcnn.yml
@@ -1,10 +1,11 @@
 input: ["img"]
 output: ["bboxes", "bbox_scores", "bbox_labels"]
 
-weights_dir: ["../peekingduck_weights/mtcnn"]
-blob_file: "mtcnn.zip"
-graph_files: {
-    mtcnn: ../peekingduck_weights/mtcnn/mtcnn.pb
+weights_parent_dir: null
+weights: {
+    model_subdir: mtcnn,
+    blob_file: mtcnn.zip,
+    model_file: mtcnn.pb
 }
 mtcnn_min_size: 40
 mtcnn_factor: 0.709
