--- a/peekingduck/configs/model/yolo.yml
+++ b/peekingduck/configs/model/yolo.yml
@@ -2,13 +2,12 @@ input: ["img"]
 output: ["bboxes", "bbox_labels", "bbox_scores"]
 
 model_type: v4tiny # v4 or v4tiny
-
-weights_parent_dir: default
+weights_parent_dir: null
 weights: {
     model_subdir: yolov4,
-    blob_name: yolo.zip,
-    classes_name: coco.names,
-    model_name: {
+    blob_file: yolo.zip,
+    classes_file: coco.names,
+    model_file: {
         v4: yolov4.pb,
         v4tiny: yolov4-tiny.pb
     }
