--- a/peekingduck/configs/model/yolo_face.yml
+++ b/peekingduck/configs/model/yolo_face.yml
@@ -2,14 +2,16 @@ input: ["img"]
 output: ["bboxes", "bbox_labels", "bbox_scores"]
 
 model_type: v4tiny # v4 or v4tiny
-classes: ../peekingduck_weights/yolo_face/classes.names
-weights_dir: ["../peekingduck_weights/yolo_face"]
-model_weights_dir: {
-    v4: ../peekingduck_weights/yolo_face/yolov4,
-    v4tiny: ../peekingduck_weights/yolo_face/yolov4tiny,
+weights_parent_dir: null
+weights: {
+    model_subdir: yolo_face,
+    blob_file: yolo_face.zip,
+    classes_file: classes.names,
+    saved_model_subdir: {
+        v4: yolov4,
+        v4tiny: yolov4tiny
+    }
 }
-blob_file: "yolo_face.zip"
-
 size: 416
 detect_ids: [0,1]
 max_output_size_per_class: 50
