--- a/tests/pipeline/nodes/model/yolov4_license_plate/test_yolov4_license_plate.yml
+++ b/tests/pipeline/nodes/model/yolov4_license_plate/test_yolov4_license_plate.yml
@@ -2,13 +2,16 @@ input: ["img"]
 output: ["bboxes", "bbox_labels", "bbox_scores"]
 
 model_type: v4 # v4 or v4tiny
-classes: ../peekingduck_weights/yolo_license_plate/classes.names
-weights_dir: ["../peekingduck_weights/yolo_license_plate"]
-model_weights_dir: {
-    v4: ../peekingduck_weights/yolo_license_plate/LPyolov4,
-    v4tiny: ../peekingduck_weights/yolo_license_plate/LPyolov4tiny,
+weights_parent_dir: null
+weights: {
+    model_subdir: yolo_license_plate,
+    blob_file: yolo_license_plate.zip,
+    classes_file: classes.names,
+    saved_model_subdir: {
+        v4: LPyolov4,
+        v4tiny: LPyolov4tiny
+    }
 }
-blob_file: "yolo_license_plate.zip"
 
 size: 416
 max_output_size_per_class: 50
