Add reference to respective config files in live.py and recorded.py threading comments Export READTHEDOCS=1 in docs/Makefile

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,5 +1,6 @@
 # Minimal makefile for Sphinx documentation
 #
+export READTHEDOCS=1
 
 # You can set these variables from the command line, and also
 # from the environment for the first two.
