--- a/run_config.yml
+++ b/run_config.yml
@@ -1,5 +1,14 @@
 nodes:
-- input.live
-- model.yolo
+# - input.live
+- input.recorded:
+    input_dir: "E:/PeekingDuck_AIAP/PeekingDuck_test2/test/test_images/no_LP/t4.jpg"
+# - model.posenet
+- model.movenet:
+    model_type: "multipose_lightning"
+- dabble.fps
+- draw.poses
 - draw.bbox
-- output.screen
+- draw.legend
+- output.media_writer:
+    output_dir: "E:/PeekingDuck_AIAP/PeekingDuck_test2/test/movenet_test"
+# - output.screen
