--- a/peekingduck/configs/model/movenet.yml
+++ b/peekingduck/configs/model/movenet.yml
@@ -2,15 +2,16 @@ input: ["img"]
 output: ["bboxes", "keypoints", "keypoint_scores", "keypoint_conns", "bbox_labels"]
 
 model_type: multipose_lightning
-weights_dir: ["../peekingduck_weights/movenet"]
-model_weights_dir: {
-    multipose_lightning: ../peekingduck_weights/movenet/multipose_lightning,
-    singlepose_lightning: ../peekingduck_weights/movenet/singlepose_lightning,
-    singlepose_thunder: ../peekingduck_weights/movenet/singlepose_thunder,
+weights_parent_dir: null
+weights: {
+    model_subdir: movenet,
+    blob_file: movenet.zip,
+    model_file: {
+      multipose_lightning: multipose_lightning,
+      singlepose_lightning: singlepose_lightning,
+      singlepose_thunder: singlepose_thunder,
+  }
 }
-
-blob_file_name: "movenet.zip"
-
 resolution: {
     singlepose_lightning: { height: 192, width: 192 },
     singlepose_thunder: { height: 256, width: 256 },
