--- a/.github/workflows/post_merge_checks.yml
+++ b/.github/workflows/post_merge_checks.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r cicd_requirements.txt
+          pip install peekingduck --no-dependencies
       - name: Run all tests
         run: bash ./scripts/run_tests.sh all
       - name: Run broken link report
