--- a/.github/workflows/post_merge_checks.yml
+++ b/.github/workflows/post_merge_checks.yml
@@ -23,7 +23,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r cicd_requirements.txt
-          pip install peekingduck --no-dependencies
+          TEST_VER=`grep -m 1 TEST_VERSION ./tests/api/test_api.py | cut -d ' ' -f 3`
+          echo "TEST_VER=${TEST_VER}"
+          bash ./scripts/update_version.sh ${TEST_VER}
+          pip install . --no-dependencies
       - name: Run all tests
         run: bash ./scripts/run_tests.sh all
       - name: Run broken link report
