--- a/.github/workflows/daily_drift_checks.yml
+++ b/.github/workflows/daily_drift_checks.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Install peekingduck locally
         run: |
           python -m pip install --upgrade pip
+          pip install -r cicd_requirements.txt
           TEST_VER=`grep -m 1 TEST_VERSION ./tests/api/test_api.py | cut -d ' ' -f 3`
           TEST_VER=`echo ${TEST_VER} | cut -d '"' -f 2`
           echo "test_api.py TEST_VER=${TEST_VER}"
