--- a/.github/workflows/daily_drift_checks.yml
+++ b/.github/workflows/daily_drift_checks.yml
@@ -22,11 +22,15 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install peekingduck locally
         run: |
+          if [ "$RUNNER_OS" == "windows-2019" ]; then
+            TEST_VER=0.0.0dev
+          else
+            TEST_VER=`grep -m 1 TEST_VERSION ./tests/api/test_api.py | cut -d ' ' -f 3`
+            TEST_VER=`echo ${TEST_VER} | cut -d '"' -f 2`
+          fi
+          echo "test_api.py TEST_VER=${TEST_VER}"
           python -m pip install --upgrade pip
           pip install -r cicd_requirements.txt
-          TEST_VER=`grep -m 1 TEST_VERSION ./tests/api/test_api.py | cut -d ' ' -f 3`
-          TEST_VER=`echo ${TEST_VER} | cut -d '"' -f 2`
-          echo "test_api.py TEST_VER=${TEST_VER}"
           bash ./scripts/update_version.sh ${TEST_VER}
           pip install . --no-dependencies
       - name: Run api tests
