--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ install_requires =
     tqdm == 4.45.0
     colorama == 0.4.4
     scipy
+    onnxruntime == 1.9.0
 include_package_data = True
 
 # Optional Requirements that can be configured how pip behaves in circumstances
