--- a/peekingduck/configs/model/movenet.yml
+++ b/peekingduck/configs/model/movenet.yml
@@ -16,8 +16,7 @@ resolution: {
     singlepose_lightning: { height: 192, width: 192 },
     singlepose_thunder: { height: 256, width: 256 },
     multipose_lightning: { height: 256, width: 256 }, 
-} # only multipose can use dynamic shape that needs be multiples of 32
-  # recommended shape is 256
+} # only multipose allows dynamic shape in multiples of 32 (recommended 256)
 
 bbox_score_threshold: 0.2
 keypoint_score_threshold: 0.3
