build: specify scipy version

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ install_requires =
     colorama == 0.4.4
     torch == 1.10.0
     torchvision == 0.11.1
-    scipy
+    scipy >= 1.4.1
 include_package_data = True
 
 # Optional Requirements that can be configured how pip behaves in circumstances
