test: rectified test_movenet.py-> test_no_weights to check the logger properly at peekingduck.pipeline.nodes.model.movenetv1.movenet_model.logger, instead of the previous peekingduck.pipeline.nodes.model.movenet.movenet_model.logger

--- a/.github/workflows/pre_merge_ci.yml
+++ b/.github/workflows/pre_merge_ci.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Run lint checks
         uses: ./.github/actions/linting-checks  # note only works after checkout@v2
       - name: Run unit tests
-        run: bash ./scripts/run_tests.sh all -s
+        run: bash ./scripts/run_tests.sh all
       - name: Run broken link report
         run: python ./scripts/check_links.py
