--- a/.github/workflows/post_merge_checks.yml
+++ b/.github/workflows/post_merge_checks.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04]
+        os: [ubuntu-18.04, windows-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -19,18 +19,22 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
-          cache: 'pip'
+          cache: "pip"
       - name: Install dependencies
         run: |
+          if [ "$RUNNER_OS" == "Windows" ]; then
+            TEST_VER=0.0.0dev
+          else
+            TEST_VER=`grep -m 1 TEST_VERSION ./tests/module_import/test_module_import.py | cut -d ' ' -f 3`
+            TEST_VER=`echo ${TEST_VER} | cut -d '"' -f 2`
+          fi
+          echo "test_module_import.py TEST_VER=${TEST_VER}"
           python -m pip install --upgrade pip
           pip install -r cicd_requirements.txt
-          TEST_VER=`grep -m 1 TEST_VERSION ./tests/module_import/test_module_import.py | cut -d ' ' -f 3`
-          TEST_VER=`echo ${TEST_VER} | cut -d '"' -f 2`
-          echo "test_module_import.py TEST_VER=${TEST_VER}"
           bash ./scripts/update_version.sh ${TEST_VER}
           pip install . --no-dependencies
+        shell: bash
       - name: Run all tests
         run: bash ./scripts/run_tests.sh all
       - name: Run broken link report
         run: python ./scripts/check_links.py
-
