feat: update resizing on opencv version >= 4.5

--- a/peekingduck/configs/output/screen.yml
+++ b/peekingduck/configs/output/screen.yml
@@ -3,6 +3,7 @@ output: ["pipeline_end"]
 
 window_name: "PeekingDuck"
 window_size: {
+    do_resizing: False,
     width: 1280,
     height: 720 
 }
