--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 colorama == 0.4.4
 numpy == 1.17.3
-opencv-python == 4.1.2.30
+opencv-python >= 4.5.2.54
 pyyaml >= 5.3.1
 requests == 2.24.0
 tensorflow == 2.2.0
