refactor/test: remove bbox_scores from tracking tests, update tracking config to be consistent

--- a/peekingduck/configs/dabble/tracking.yml
+++ b/peekingduck/configs/dabble/tracking.yml
@@ -1,4 +1,4 @@
-input: ["img", "bboxes", "bbox_labels", "bbox_scores"]
+input: ["img", "bboxes"]
 output: ["obj_tags"]
 
 optional_inputs: ["mot_metadata"]
