fix: use opencv-contrib-python so mosse works

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ install_requires =
     pyyaml >= 5.3
     click == 7.1.2
     requests == 2.24
-    opencv-python >= 4.5.2.54
+    opencv-contrib-python >= 4.5.2.54
     tensorflow >= 2.2
     numpy >= 1.17.3
     tqdm == 4.45.0
