--- a/scripts/benchmarks/run_yolox_small_multi.yml
+++ b/scripts/benchmarks/run_yolox_small_multi.yml
@@ -1,6 +1,6 @@
 nodes:
 - input.recorded:
-    input_dir: images/benchmarking/multi
+    input_dir: data/benchmark/multi
 - model.yolox:
     model_type: yolox-s
 - dabble.fps
