--- a/run_config.yml
+++ b/run_config.yml
@@ -1,5 +1,63 @@
+# # group size checking
+# nodes:
+# - input.recorded:
+#     input_dir: /Users/ngleeping/Desktop/benchmark/multiple_people.mp4
+# - model.posenet
+# - dabble.keypoints_to_3d_loc:
+#     focal_length: 1.14
+#     torso_factor: 0.9
+# - dabble.group_nearby_objs:
+#     obj_dist_thres: 1.0
+# - dabble.check_large_groups:
+#     group_size_thres: 2
+# - dabble.fps
+# - dabble.statistics:
+#     mode: len
+#     attribute: {
+#       primary_key: obj_tags,
+#       secondary_key: groups
+#     }
+# - draw.bbox
+# - draw.group_bbox_and_tag
+# - draw.legend
+# - output.screen
+
+# social distancing
+# nodes:
+# - input.recorded:
+#     input_dir: /Users/ngleeping/Desktop/benchmark/multiple_people.mp4
+# - model.posenet
+# - dabble.keypoints_to_3d_loc:
+#     focal_length: 1.14
+#     torso_factor: 0.9
+# - dabble.check_nearby_objs:
+#     near_threshold: 1.5
+#     tag_msg: "TOO CLOSE!"
+# - dabble.fps
+# - dabble.statistics:
+#     mode: conditional_count #len
+#     condition: "TOO CLOSE!" 
+#     attribute: {
+#       primary_key: obj_tags,
+#       secondary_key: flags
+#     }
+# - draw.bbox
+# - draw.tag:
+#     attribute: flags
+# - draw.legend
+# - output.screen
+
+# normal counting
 nodes:
-- input.live
+- input.recorded:
+    input_dir: /Users/ngleeping/Desktop/benchmark/multiple_people.mp4
 - model.yolo
+- dabble.bbox_count
+- dabble.statistics:
+    mode: normal #len
+    attribute: {
+      primary_key: count,
+      secondary_key: False
+    }
 - draw.bbox
 - output.screen
